--- a/.github/workflows/build-maven.yml
+++ b/.github/workflows/build-maven.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Build, tag, and push docker image to Amazon ECR
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: my-app_backend
+          REPOSITORY: ewaluli-backend-website
           IMAGE_TAG: dev
         run: |
           echo $REGISTRY/$REPOSITORY:$IMAGE_TAG
